// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown tests render should render closed dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_down
        </i>
      </span>
    }
    dropdownButton={true}
    kind="primary"
    onClick={[Function]}
    size="medium"
  />
</div>
`;

exports[`Dropdown tests render should render open arrow dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_up
        </i>
      </span>
    }
    dropdownButton={true}
    kind="primary"
    onClick={[Function]}
    size="medium"
  />
  <div
    className="dropdown-content dropdown-align-left arrow-dropdown"
  >
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-19"
      onClick={[Function]}
    >
      party
    </button>
    <hr
      key="divider-20"
    />
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-21"
      onClick={[Function]}
    >
      woohoo
    </button>
  </div>
</div>
`;

exports[`Dropdown tests render should render open dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_up
        </i>
      </span>
    }
    dropdownButton={true}
    kind="primary"
    onClick={[Function]}
    size="medium"
  />
  <div
    className="dropdown-content dropdown-align-left"
  >
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-16"
      onClick={[Function]}
    >
      party
    </button>
    <hr
      key="divider-17"
    />
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-18"
      onClick={[Function]}
    >
      woohoo
    </button>
  </div>
</div>
`;
